<resources>
    <string name="app_name">ScanX</string>

    <string name="home">Home</string>
    <string name="pdf_tools">PDF Tools</string>
    <string name="image_tools">Image Tools</string>
    <string name="profile">Profile</string>
    <string name="home_text">Image To PDF convertor</string>
    <string name="select_image">Select From Gallery</string>
    <string name="select_image_here">Select From Gallery (Click on Image)</string>
    <string name="capture_image">Capture With Camera</string>
    <string name="selected_images">Selected Images</string>
    <string name="convert_to_pdf">Convert To PDF</string>
    <string name="name_your_file">Name Your File</string>
    <string name="select_quality">Image Quality</string>
    <string name="name_hint">Enter File Name</string>
    <string name="auto">Auto Name</string>
    <string name="rename">Rename</string>
    <string name="about_us">About Us</string>
    <string name="capture">Capture</string>
    <string name="copy_text">Copy Text</string>
    <string name="image_reducer">Crop, Reduce, Edit Image</string>
    <string name="image_hint">Enter Size in KB</string>
    <string name="image_size">Reduce to KB</string>
    <string name="image_resolution">Resolution</string>
    <string name="width">Width</string>
    <string name="height">Height</string>
    <string name="edit">Edit</string>
    <string name="save_image">Save Image</string>

    <string name="click_to_speak">Click Speak</string>
    <string name="click_to_scan">Click To Scan Image</string>
    <string name="enter_text_here">Text Will Be Shown Here</string>
    <string name="scan_image">Scan the image or click photo to show text here</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>